Feat: layout inicial de matrices

--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@
     
 </head>
 <body>
+    <h1>Calculadora de Matrices Interactiva</h1>
+
+    <section id="controles">
+        <div class="dimension">
+            <h2>Matriz A</h2>
+            <label>Filas: <input type="number" id="rowsA" min="1" value="2"></label>
+            <label>Columnas: <input type="number" id="colsA" min="1" value="2"></label>
+            <button id="genA">Generar Matriz A</button>
+        </div>
+        <div class="dimension">
+            <h2>Matriz B</h2>
+            <label>Filas: <input type="number" id="rowsB" min="1" value="2"></label>
+            <label>Columnas: <input type="number" id="colsB" min="1" value="2"></label>
+            <button id="genB">Generar Matriz B</button>
+        </div>
+    </section>
+
     
-</body>
-</html>
 </body>
 </html>
