Feat: css y js unidos al html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <title>Calculadora de Matrices</title>
 </head>
@@ -53,4 +54,5 @@
     </section>
 
 </body>
+<script src="script.js"> </script>
 </html>
