--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         </div>
     </section>
 
+<div id="operacion-resultado">
     <section id="operaciones">
         <h2>Operaciones</h2>
         <button id="suma">Sumar (A + B)</button>
@@ -52,7 +53,8 @@
         <h2>Resultado</h2>
         <div id="resultMatrix"></div>
     </section>
-
+</div>
 </body>
 <script src="script.js"> </script>
 </html>
+
